[gd_scene load_steps=13 format=3 uid="uid://df2ddee7sa1sv"]

[ext_resource type="Script" path="res://Game/1Scene/2Shop_Map/Objects/Shop/Script/shop.gd" id="1_r7683"]
[ext_resource type="Texture2D" uid="uid://bd0lbxw2pybl0" path="res://Game/1Scene/2Shop_Map/Texture/Shop_Top.png" id="1_tvsnv"]
[ext_resource type="Texture2D" uid="uid://du8wn78pxhxkm" path="res://Game/1Scene/2Shop_Map/Texture/Shop_bottom.png" id="2_xr347"]
[ext_resource type="Texture2D" uid="uid://i2lu1je620re" path="res://Game/1Scene/2Shop_Map/Texture/Shop_bottom_selected.png" id="3_4u7lj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_88xwi"]
atlas = ExtResource("2_xr347")
region = Rect2(0, 0, 110, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkeyy"]
atlas = ExtResource("3_4u7lj")
region = Rect2(0, 0, 110, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_j2002"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88xwi")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkeyy")
}],
"loop": false,
"name": &"Selected",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lg888"]
size = Vector2(140, 33)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0hi8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pit0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gd83x"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5idqe"]
size = Vector2(110, 58.5)

[node name="Shop" type="StaticBody2D"]
script = ExtResource("1_r7683")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
texture_filter = 1
scale = Vector2(1.609, 1.609)
texture = ExtResource("1_tvsnv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.609, 1.609)
sprite_frames = SubResource("SpriteFrames_j2002")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 23.5)
shape = SubResource("RectangleShape2D_lg888")

[node name="Button" type="Button" parent="."]
offset_left = -49.0
offset_top = 25.0
offset_right = -26.0
offset_bottom = 68.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_s0hi8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0pit0")
theme_override_styles/normal = SubResource("StyleBoxFlat_gd83x")

[node name="Trigger_Arrea" type="Area2D" parent="."]
visibility_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger_Arrea"]
position = Vector2(-36, 75.75)
shape = SubResource("RectangleShape2D_5idqe")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="Trigger_Arrea" to="." method="_on_trigger_arrea_body_entered"]
[connection signal="body_exited" from="Trigger_Arrea" to="." method="_on_trigger_arrea_body_exited"]
